# gc_can

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build_dir  cmake_install.cmake  example_slurm_wrapper.sh  gc_can  general_config_state_test.cpp  general_funct.cpp  general_params.cpp  general_params_backup.cpp  general_params_copy.cpp  general_params_test.cpp  generate_config_state.cpp  generate_config_state2.cpp  generate_config_state_backup.cpp  generate_config_state_backup2.cpp  generate_config_state_copy.cpp  generate_config_state_copy2.cpp  generate_config_state_test.cpp  hello_world  move_path.cpp  output  place_cells.cpp  rebuild.sh  results  slurm_wrapper.sh
.build/: CMakeCache.txt
archive/: main_gc_can.cpp  main_gc_can2.cpp  main_gc_can3.cpp  main_gc_can4.cpp
data/: anim_angles.csv  anim_speeds.csv  ext_dir.cpp  ext_dir_initial_42x42.cpp  ext_dir_initial_rot_r.cpp  init_firings.cpp  test.cpp
scripts/: activity_image_autocorr.m  activity_image_phys_spc_smooth.asv  activity_image_phys_spc_smooth.m  activity_movie.m  activity_movie_animate_spike_traj.asv  activity_movie_animate_spike_traj.m  activity_movie_autocorr.m  activity_movie_fvp.m  activity_movie_nrn_spc (compneurodev's conflicted copy 2022-12-09).m  activity_movie_nrn_spc (compneurodev3's conflicted copy 2022-07-05).asv  activity_movie_nrn_spc.asv  activity_movie_nrn_spc.m  activity_movie_phys_spc.asv  activity_movie_phys_spc.m  activity_movie_phys_spc_smooth.asv  activity_movie_phys_spc_smooth.m  activity_movie_plot_spikes_group.m  activity_movie_postrack.asv  activity_movie_postrack.m  (+55 more)
(+265 files in other folders)
